fixed overflow issues

--- a/public/css/rotating.sky.css
+++ b/public/css/rotating.sky.css
@@ -11,33 +11,37 @@
   margin: 0 auto;
   margin-top: -200px;
   margin-left: -1200px;
-  width: 100%;
-  height: 100%;
+  /*width: 100%;
+  height: 100%;*/
   overflow: hidden;
   z-index: 1;
 }
 
 .tree {
-  z-index: 10000;
+  z-index: 2;
+  overflow: hidden;
 }
 .tree:before {
     content: '';
     position: absolute;
-    width: 626px;
+    width: 600px;
     height: 662px;
-    bottom: -44px;
-    left: -127px;
+    bottom: 30px;
+    /*left: -127px;*/
+    left: -340px;
     color: white;
     background: url('../assets/home/tree.png') no-repeat;
     z-index: -1;
     transform: scale(1.2);
+    overflow: hidden;
 }
 
 .rotating-sky:after {
   content: "";
   display: block;
   position: static;
-  width: 4400px;
+  /*width: 4400px;*/
+  width: 4000px;
   height: 2900px;
   top: -125px;
   left: 125px;
